vendor/cargo/parameterized-macro-2.0.0/tests/ok/01_import.rs
use parameterized_macro::parameterized;

#[parameterized(v = { 1, 2 })]
fn my_test(v: i32) {}

fn main() {}
