vendor/cargo/parameterized-macro-2.0.0/tests/fail/inequal_amount_of_arg.rs
use parameterized_macro::parameterized;

#[parameterized(v = { "a", "b" }, w = { 1, 2, 3 })]
pub(crate) fn my_test(v: &str, w: i32) {}

fn main() {}
